# Waterdeep

./: .gitmodules  CMakeLists.txt  CPPLINT.cfg  build.sh
cmake/: ConfigureCompiler.cmake  ConfigureSystem.cmake  SyncSubmodules.cmake
data/: waterdeep.json
source/: CMakeLists.txt
source/GameLogic/: ConfigurationParser.cpp  GameBoard.cpp  Initializers.cpp  PlayerData.cpp
source/GameLogic/include/: GameBoard.hpp  GameElements.hpp  PlayerData.hpp
source/GameLogic/include/utils/: ElementCrafters.hpp  JSONParsers.hpp  TypeConverters.hpp
